--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "classnames": "^2.3.2",
     "mui": "^0.0.1",
     "node-sass": "^7.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.9.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
+    "react-use-scroll-snap": "^0.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "props-type": "^1.0.1"
   }
 }
