--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "framer-motion": "^10.12.11",
     "mui": "^0.0.1",
     "node-sass": "^8.0.0",
     "prop-types": "^15.8.1",
@@ -34,6 +35,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
-    "vite": "^4.3.2"
+    "vite": "^4.3.6"
   }
 }
