--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.11",
     "mui": "^0.0.1",
@@ -20,6 +21,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-parallax": "^3.5.1",
     "react-responsive": "^9.0.2",
